[package]
name = "edge-signaling"
version = "1.0.0"
authors = ["Jake Naviasky <jake@commonwealth.im>, Drew Stone <drew@commonwealth.im>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
substrate-keyring = { git = "https://github.com/paritytech/substrate.git", optional = true }
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
paint-support = { git = "https://github.com/paritytech/substrate.git", default-features = false }
paint-system = { git = "https://github.com/paritytech/substrate.git", default-features = false }
paint-balances = { git = "https://github.com/paritytech/substrate.git", default-features = false }
edge-voting = { path = "../edge-voting", default-features = false }

[features]
default = ["std"]
std = [
	"serde/std",
	"serde_derive",
	"safe-mix/std",
	"codec/std",
	"substrate-primitives/std",
	"rstd/std",
	"sr-primitives/std",
	"paint-balances/std",
	"paint-support/std",
	"paint-system/std",
	"edge-voting/std",
]
