[package]
name = "edge-signaling"
version = "1.0.0"
authors = ["Jake Naviasky <jake@commonwealth.im>, Drew Stone <drew@commonwealth.im>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }
sr-primitives = { git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }
support = { package ="srml-support", git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }
system = { package ="srml-system", git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }
balances = { package ="srml-balances", git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }
voting = { package ="edge-voting", path = "../edge-voting", default-features = false }

[dev-dependencies]
sr-io = { git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }
substrate-primitives = { git = "https://github.com/hicommonwealth/substrate.git", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"serde_derive",
	"safe-mix/std",
	"codec/std",
	"rstd/std",
	"sr-primitives/std",
	"balances/std",
	"support/std",
	"system/std",
	"voting/std",
]
