[package]
name = "edge-treasury-reward"
version = "1.0.0"
authors = ["drewstone <drewstone329@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
support = { package = "paint-support", git = "https://github.com/paritytech/substrate.git", default-features = false }
system = { package = "paint-system", git = "https://github.com/paritytech/substrate.git", default-features = false }
staking = { package = "paint-staking", git = "https://github.com/paritytech/substrate.git", default-features = false }
balances = { package = "paint-balances", git = "https://github.com/paritytech/substrate.git", default-features = false }
treasury = { package = "paint-treasury", git = "https://github.com/paritytech/substrate.git", default-features = false }

[dev-dependencies]
sr-io = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sr-staking-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
staking-reward-curve = { package = "paint-staking-reward-curve", git = "https://github.com/paritytech/substrate.git", default-features = false }
session = { package = "paint-session", git = "https://github.com/paritytech/substrate.git", default-features = false }
timestamp = { package = "paint-timestamp", git = "https://github.com/paritytech/substrate.git", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"codec/std",
	"rstd/std",
	"sr-primitives/std",
	"balances/std",
	"support/std",
	"system/std",
	"staking/std",
	"treasury/std",
]
