[package]
name = "edgeware-testing"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test utilities for Edgeware."
edition = "2018"

[dependencies]
balances = { package = "paint-balances", git = "https://github.com/paritytech/substrate.git" }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate.git" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
contracts = { package = "paint-contracts", git = "https://github.com/paritytech/substrate.git" }
grandpa = { package = "paint-grandpa", git = "https://github.com/paritytech/substrate.git" }
indices = { package = "paint-indices", git = "https://github.com/paritytech/substrate.git" }
keyring = { package = "substrate-keyring", git = "https://github.com/paritytech/substrate.git" }
edgeware-executor = { path = "../executor" }
edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git" }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git" }
runtime_support = { package = "paint-support", git = "https://github.com/paritytech/substrate.git" }
session = { package = "paint-session", git = "https://github.com/paritytech/substrate.git" }
sr-primitives = { git = "https://github.com/paritytech/substrate.git" }
staking = { package = "paint-staking", git = "https://github.com/paritytech/substrate.git" }
substrate-executor = { git = "https://github.com/paritytech/substrate.git" }
system = { package = "paint-system", git = "https://github.com/paritytech/substrate.git" }
test-client = { package = "substrate-test-client", git = "https://github.com/paritytech/substrate.git" }
timestamp = { package = "paint-timestamp", git = "https://github.com/paritytech/substrate.git" }
transaction-payment = { package = "paint-transaction-payment", git = "https://github.com/paritytech/substrate.git" }
treasury = { package = "paint-treasury", git = "https://github.com/paritytech/substrate.git" }
wabt = "0.9.2"
